# pipen-gcs

./: .coveragerc  .gitignore  README.md  pipen_gcs.py  pyproject.toml  setup.py
.github/workflows/: ci.yml
examples/: example.py
pipen_gcs/: __init__.py  utils.py
tests/: conftest.py  test_plugin.py  test_utils.py
