[tool.poetry]
name = "pipen-gcs"
version = "0.1.0a3"
description = "A plugin for pipen to handle file metadata in Google Cloud Storage"
authors = ["pwwang <1188067+pwwang@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.build]
generate-setup-file = true

[tool.poetry.dependencies]
python = "^3.9"
pipen = { version = "^0.16.0a1", allow-prereleases = true }
google-cloud-storage = "^3"

[tool.poetry.group.examples.dependencies]
python-dotenv = "^1"

[tool.poetry.group.extra.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-vv -n 1 --cov-config=.coveragerc --cov=pipen_gcs --cov-report xml:.coverage.xml --cov-report term-missing"
console_output_style = "progress"
junit_family = "xunit1"
filterwarnings = []
